overflow problem solved

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@ body {
   background: #111;
   color: #fff;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 // contact page
